# Kaleidoscope

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: AST.h  Debug.h  Lexer.h  Parser.h  Token.h
src/: AST.cpp  Debug.cpp  Lexer.cpp  Optimize.cpp  Parser.cpp  control flow.cpp  main.cpp
